# codex-meters

./: .env.mock  .gitignore  AGENTS.md  Makefile  README.md  index.html  install-pkg.sh  install.sh  package.json  vite.config.ts
docs/agents/: README.md
docs/agents/architecture/: frontend.md  index.md  tauri-backend.md  windows-state.md
docs/agents/development/: index.md  mock-data.md  testing.md  workflow.md
docs/agents/maintenance/: agent-docs.md  index.md  rules.md
docs/agents/release/: build-artifacts.md  checklist.md  index.md  installers.md
docs/compatibility/: codex-usage-source.md
docs/plans/: 2026-07-15-codex-token-meter.md
docs/specs/: 2026-07-15-codex-token-meter.md
releases/v0.1.0/: Codex Meters.pkg  Codex Meters_0.1.0_aarch64.dmg
scripts/: pkg-components.plist  smoke-test-macos.sh  verify-pkg.sh
scripts/pkg/: postinstall
src/: main.ts  types.test.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/fixtures/: usage-5h-7d.json  usage-7d-only.json  usage-duplicate-windows.json  usage-failed.json  usage-malformed-percent.json  usage-unsupported-window.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  login_launch.rs  main.rs  provider.rs  refresh.rs  settings.rs  state.rs  usage.rs
src-tauri/tests/: provider_fixtures.rs  usage_state.rs
src/ui/: refresh-controller.ts  render.ts  state.ts  styles.css  tauri-api.ts
