[package]
name = "codex-token-meter"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[lib]
name = "codex_token_meter_lib"
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "codex-token-meter"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
auto-launch = "0.6"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
